--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "google-map-react": "^2.1.10",
+    "mapbox-gl": "^2.4.1",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-mapbox-gl": "^5.1.1"
   }
 }
